# mpower_custom_app_template

./: .gitignore  README.md  create-tarball.sh  package_app.sh
docs/: Test.md  WhatisCustomApp.md
examples/: README.md
examples/BashExampleApp/: README.md
examples/CExampleApp/: CMakeLists.txt  README.md  main.c
examples/Python3ExampleApp/: Python3ExampleApp.py  README.md
examples/bash_example/: BashExampleApp.sh  README.md  Start  bash_example.sh  manifest.json  package_app.sh
examples/c_example/: .gitignore  CMakeLists.txt  README.md  Start  build_app.sh  example.cfg.json  main.c  manifest.json  package_app.sh
examples/c_example_minimal/: CMakeLists.txt  README.md  build_app.sh  main.c  package_app.sh
examples/python3_example/: EXAMPLE_CFG_README.md  Install  LICENSE  README.md  Start  appargs.py  applogger.py  manifest.json  mpower_api.py  package_app.sh  package_app.sh.old  python3_example.py
examples/python3_example_minimal/: README.md  Start  manifest.json  package_app.sh  python3_example_minimal.py
src/: README.md  Start  install-app.sh  manifest.json  manifest.json.basic.example  manifest.json.sdcard.example  p_manifest.json  package_app.sh  remove-app.sh  sample-test.py
src/6.x.x_and_older/: README.md  Start  manifest.json.basic.example  manifest.json.sdcard.example
src/6.x.x_and_older/provisioning/: README.md
src/7.x.x_and_newer/: README.md  manifest.json.persistentstorage.example
src/config/: README.md
src/provisioning/: README.md
src/utils/: applogger.py  publishers.py
utils/python3/: appargs.py  applogger.py  publishers.py
(+4 files in other folders)
